✨ Feat: 세팅 화면 UI 구현 및 바텀네비 세팅
- 바텀네비게이션 custom -> setting으로 변경
- 세팅 화면 디자인 수정 (프로필 + 설정 정보)

Related to: #357

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -24,9 +24,9 @@
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/customFragment"
+        android:id="@+id/settingFragment"
         android:icon="@drawable/selector_nav_custom"
-        android:title="@string/nav_custom"
+        android:title="@string/nav_setting"
         android:enabled="true"
         app:showAsAction="ifRoom"/>
 </menu>
