--- a/app/src/main/res/layout/activity_moim_diary_detail.xml
+++ b/app/src/main/res/layout/activity_moim_diary_detail.xml
@@ -313,7 +313,7 @@
             android:layout_height="60dp"
             android:background="@{viewModel.diaryChanged ? @color/main : @color/text_unselected}"
             android:enabled="@{viewModel.diaryChanged}"
-            android:text="@{viewModel.diarySchedule.hasDiary ? @string/diary_changes_save : @string/diary_add}"
+            android:text="@{viewModel.diarySchedule.hasDiary ? @string/changes_save : @string/diary_add}"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:visibility="@{!viewModel.diarySchedule.hasDiary ? View.VISIBLE : viewModel.isEditMode ? View.VISIBLE : View.GONE}"
