--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -224,6 +224,7 @@
                     android:text="@={viewModel.intro}"
                     android:hint="@string/register_intro_hint"
                     android:maxLength="50"
+                    android:maxLines="2"
                     android:textColorHint="@color/text_placeholder"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
