--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -66,10 +66,10 @@
                     android:layout_height="120dp"
                     android:layout_marginTop="30dp"
                     android:background="@drawable/bg_register_profile_border"
-                    android:src="@{viewModel.profileImage}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/profile_edit_top_cl" />
+                    app:layout_constraintTop_toBottomOf="@+id/profile_edit_top_cl"
+                    app:centerCropImage="@{viewModel.profileImage}"/>
 
                 <ImageView
                     android:id="@+id/profile_edit_profile_img_filter_iv"
