✨ Feat: 설정 -> 프로필 편집 화면 이동 및 데이터 전달
- 패키지 구조 양식 통일

Related to: #359

--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="viewModel"
-            type="com.mongmong.namo.presentation.ui.custom.ProfileEditViewModel" />
+            type="com.mongmong.namo.presentation.ui.setting.profile.ProfileEditViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
