✨ Feat: 프로필 편집 API 통신 코드 구현
- Repository 및 구현체, DataSource, ApiService 코드 작성

Related to: #359

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -80,7 +80,9 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/img_default_profile"/>
+                    app:imageUrl="@{profile.profileUrl}"
+                    app:placeHolder="@{@drawable/img_default_profile}"
+                    tools:src="@drawable/img_default_profile"/>
 
             </androidx.cardview.widget.CardView>
 
