🎨 Style: 세팅, 프로필 화면 관련 문자열 정리
Related to: #359

--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -142,7 +142,7 @@
 
                 <TextView
                     android:id="@+id/profile_edit_nickname_rule_tv"
-                    style="@style/content_regular"
+                    style="@style/subtext_12"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:lineHeight="24sp"
