✨ Feat: 모임 일정 편집 -> 친구 초대 화면 이동 시 이미 초대된 친구 표시해 주기
- 화면 이동 시 참석자의 userId 목록 넘기기

Related to: #347

--- a/app/src/main/res/layout/item_friend_invite.xml
+++ b/app/src/main/res/layout/item_friend_invite.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
+        <variable
+            name="canEdit"
+            type="Boolean" />
         <variable
             name="friend"
             type="com.mongmong.namo.domain.model.Friend"/>
@@ -84,6 +88,7 @@
             android:layout_height="28dp"
             android:checked="false"
             android:button="@null"
+            android:visibility="@{canEdit ? View.VISIBLE : View.GONE}"
             android:background="@drawable/selector_invite"/>
 
     </LinearLayout>
