--- a/app/src/main/res/layout/activity_friend_invite.xml
+++ b/app/src/main/res/layout/activity_friend_invite.xml
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center"
-            android:visibility="@{viewModel.friendList.empty ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.allFriendList.empty ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@id/friend_invite_search_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -174,6 +174,37 @@
 
         </LinearLayout>
 
+        <!-- 초대된 친구 -->
+        <LinearLayout
+            android:id="@+id/friend_invite_invited_friend_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="25dp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/friend_invite_reset_ll">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/moim_schedule_invited_friend"
+                style="@style/content_bold"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/friend_invite_invited_list_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_friend_invite"
+                tools:itemCount="2"
+                app:layout_constraintTop_toBottomOf="@id/friend_search_et"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        </LinearLayout>
+
         <!-- 모든 친구 -->
         <LinearLayout
             android:id="@+id/friend_invite_all_friend_ll"
@@ -182,7 +213,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/friend_invite_reset_ll">
+            app:layout_constraintTop_toBottomOf="@id/friend_invite_invited_friend_ll">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
@@ -195,7 +226,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:visibility="@{viewModel.friendList.empty ? View.GONE : View.VISIBLE}"
+                android:visibility="@{viewModel.allFriendList.empty ? View.GONE : View.VISIBLE}"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_friend_invite"
                 app:layout_constraintTop_toBottomOf="@id/friend_search_et"
