🎨 Design: 모임 일정 참석자 x 표시 삭제
- 이미 초대한 친구는 삭제가 불가능함
- 정책 변경에 따른 수정 사항

Related to: #347

--- a/app/src/main/res/layout/item_moim_participant.xml
+++ b/app/src/main/res/layout/item_moim_participant.xml
@@ -7,9 +7,6 @@
         <import type="com.mongmong.namo.presentation.enums.CategoryColor"/>
         <import type="android.view.View"/>
         <variable
-            name="isCurrentUserOwner"
-            type="Boolean" />
-        <variable
             name="participant"
             type="com.mongmong.namo.domain.model.Participant" />
     </data>
@@ -72,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:src="@drawable/ic_close"
-                android:visibility="@{!isCurrentUserOwner ? View.GONE : ( participant.isOwner ? View.GONE : View.VISIBLE ) }"/>
+                android:visibility="gone"/>
 
         </LinearLayout>
 
